# rust-otel-template

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  audit.html  audit.json  config.alloy  docker-compose.yml  tempo.yaml
.github/workflows/: publish-audit-html.yml  security-audit.yml
scripts/: audit_to_html.py
src/: lib.rs  main.rs  telemetry.rs
